--- a/不足与计划.md
+++ b/不足与计划.md
@@ -1,39 +1,81 @@
 ### 不足
-1. 不能够同时打开多个文件   【已解决】
-2. 不能够整体阅览文件结构   【我选择暂时不解决，因为不太重要】
-3. 预览栏的缩进问题还没解决
-4. 先打开软件，通过软件再打开文件，内容是正常的；但是当直接打开文件的话，内容是空的！貌似打开.md文件只是打开了软件而已，而不是打开了文件本身。 【已解决】
-
-5. 编辑栏和预览栏内容的对应还需要加强，目前还是有略微的对不齐。相同的内容，预览栏略微朝上两三行的样子，但是改进方法我不太希望只是修改对其行数，而是改进算法来加强对齐。   【实在是解决不了了】
-6. 自动添加换行符问题。   【已解决】
-
-
+1. 【已解决】不能够同时打开多个文件   
+2. 【我选择暂时不解决，因为不太重要】不能够整体阅览文件结构   
+3. 【相当于已经解决了，这个缩进看着挺舒服的，不较劲了】预览栏的缩进问题还没解决
+4. 【已解决】先打开软件，通过软件再打开文件，内容是正常的；但是当直接打开文件的话，内容是空的！貌似打开.md文件只是打开了软件而已，而不是打开了文件本身。 
+5. 【实在是解决不了了编辑栏和预览栏内容的对应还需要加强，目前还是有略微的对不齐。相同的内容，预览栏略微朝上两三行的样子，但是改进方法我不太希望只是修改对其行数，而是改进算法来加强对齐。   】
+6. 【已解决】自动添加换行符问题。   
+7. 【已解决】我打开一个MarkGT窗口编辑文档，但是当我在另外一个目录打开.md文档时，出现了另外一个窗口。我想要实现一个功能，就是当我在另外任何一个目录打开.md文件时，文档内容都出现在同一个窗口中。
+8. 【原来是标题与标签之间不要有换行符，这算是一个问题吗？】预览框中“不足”和“计划”中有序标签的行间距不一样。 
+9. 【已解决】完善工具栏“链接”快捷键，当我点击该快捷键时，要求生成：[链接文本](链接地址 "可选的链接标题")。  【已解决】
+10. 【服了，应该算是没有解决，哈哈哈】无法实现 “1. ” 和 “1.1 ” 之间的所属关系
+11. 【已解决】当打开一个文档时，窗口就显示“*”表示未保存。应该是刚打开时，不需要有"*"，而是当我对原文档进行修改后再用“*”标识为未保存的状态。
 
 ### 计划
-
-
-1. 在菜单栏下面添加工具栏，使能够添加一些常用的结构语法：一级标题、二级标题……、正文、代码、列表、建表格等。
-2. 添加一个新的视图功能，使得能够直接在预览栏编辑文档
-3. 添加代码块预览模块。
-4. 添加表格预览模块。
-5. 提高软件的性能，因为有时感觉打字有些延迟。
+1. 【已实现】在菜单栏下面添加工具栏，使能够添加一些常用的结构语法：一级标题、二级标题……、正文、代码、列表、建表格等。  
+2. 【已经准备放弃了】添加一个新的视图功能，使得用户能够跳过编辑栏直接在预览栏编辑文档内容，并且工具栏的快捷键能照常使用。
+3. 【很简陋，但是已经基本是实现】添加代码块预览模块，凡是代码内容，赋予一个代码块，字体调小，同时也是微软雅黑。
+4. 【已实现】添加表格预览模块。  
+5. 【现在还好，有待观察】提高软件的性能，因为有时感觉打字有些延迟。  
+6. 【已实现】添加标题目录，将这个功能添加到视图，放在整个窗口的左边。
+7. 添加任务是否完成的动态语法效果，我不太知道怎么描述，就是我可以在预览框中点击任务前的圆圈，圆圈发生变化，表示该任务已经完成，貌似也是markdown的一个语法。
 
 
 
 
 ### 测试部分
+#### 2025.5.20 测试部分
+
+- 1
+- 2
+- 3
+##### 有序列表的多级嵌套
+1. 主列表
+    1. 子列表
+        1. 子子列表
+         列表
+2. 测试：
+撒大大
+大大大
+
+# 1
+## 2
+### 3
+- 
+1. 1
+
+| 标题1 | 标题2 | 标题3 |
+|-------|-------|-------|
+| 内容1 | 内容2 | 内容3 |
+| 内容4 | 内容5 | 内容6 |
+
+[链接文本](链接地址 "可选的链接标题")
+
+#### 2025.5.19 测试部分
 # 标签 H1 测试
 ## 标签 H2 测试
 ### 标签 H3 测试
 - 列表“- ”测试
 1. 列表“1. ”测试
 ```
-代码行测试
+def closeEvent(self, event):
+    if self.is_dirty:
+        reply = QMessageBox.question(self, '退出',
+                                   '文件未保存，是否退出？',
+                                   QMessageBox.StandardButton.Yes |
+                                   QMessageBox.StandardButton.No |
+                                   QMessageBox.StandardButton.Cancel)
+        if reply == QMessageBox.StandardButton.Yes:
+            event.accept()
+        else:
+            event.ignore()
+    else:
+        event.accept()
 ```
 `行内代码测试`
 
 表格测试   
-| 标题1 | 标题2 | 标题3 |
+| 李常凯 | 题2 | 标题3 |
 |-------|-------|-------|
 | 内容1 | 内容2 | 内容3 |
 | 内容4 | 内容5 | 内容6 |
